@@ -3,41 +3,76 @@
   "$schema": "http://json-schema.org/draft-07/schema#",
   "type": "object",
   "properties": {
+    "$schema": {
+      "type": "string"
+    },
+    "id": {
+      "type": "string"
+    },
+    "$template": {
+      "type": "string"
+    },
     "issuedOn": {
       "type": "string",
-      "format": "date-time"
+      "format": "date-time",
+      "examples": ["2018-08-01T00:00:00+08:00"]
     },
     "expiredOn": {
       "type": "string",
       "format": "date-time"
     },
+    "admissionDate": {
+      "type": "string",
+      "format": "date-time"
+    },
+    "graduationDate": {
+      "type": "string",
+      "format": "date-time"
+    },
+    "cumulativeScore": {
+      "type": "number"
+    },
     "name": {
       "type": "string"
     },
-    "issuer": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
+    "issuers": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "did": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string",
+            "format": "url"
+          },
+          "email": {
+            "type": "string",
+            "format": "email"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "certificateStore": {
+            "type": "string"
+          }
         },
-        "did": {
-          "type": "string"
-        },
-        "url": {
-          "type": "string"
-        },
-        "email": {
-          "type": "string"
-        },
-        "phone": {
-          "type": "string"
-        },
-        "certificateStore": {
-          "type": "string"
-        }
+        "required": ["name", "certificateStore"],
+        "additionalProperties": false
       },
-      "required": [ "name", "certificateStore" ],
-      "additionalProperties": false
+      "exampples": [
+        {
+          "name": "Blockchain Academy",
+          "did": "DID:SG-UEN:U18274928E",
+          "url": "https://blockchainacademy.com",
+          "email": "registrar@blockchainacademy.com",
+          "certificateStore": "0xd9580260be45c3c0c2fb259a82f219b513054012"
+        }
+      ]
     },
     "recipient": {
       "type": "object",
@@ -58,7 +93,7 @@
           "type": "string"
         }
       },
-      "required": [ "name" ],
+      "required": ["name"],
       "additionalProperties": false
     },
     "transcript": {
@@ -81,6 +116,10 @@
           "courseCode": {
             "type": "string"
           },
+          "examinationDate": {
+            "type": "string",
+            "format": "date-time"
+          },
           "url": {
             "type": "string"
           },
@@ -88,14 +127,14 @@
             "type": "string"
           }
         },
-        "required": [ "name" ],
+        "required": ["name"],
         "additionalProperties": false
       }
     },
-    "metadata": {
+    "additionalData": {
       "type": "object"
     }
   },
-  "required": [ "name", "issuedOn", "issuer", "recipient" ],
+  "required": ["$schema", "id", "name", "issuedOn", "issuers", "recipient"],
   "additionalProperties": false
 }
